--- a/index.html
+++ b/index.html
@@ -389,6 +389,34 @@
         .menu1 li a:hover {
             opacity: 1;
         }
+
+/* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 20;
+        }
+
+        .modal-content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: var(--bg);
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        #preview {
+            width: 320px;
+            height: 240px;
+        }
   </style>
 </head>
 <body>
